// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CartCount/> matches the snapshot 1`] = `
.c0 {
  position: relative;
}

.c0 .count {
  display: block;
  position: relative;
  -webkit-transition: -webkit-transform 0.4s;
  -webkit-transition: transform 0.4s;
  transition: transform 0.4s;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
}

.c0 .count-enter {
  -webkit-transform: scale(4) rotateX(0.5turn);
  -ms-transform: scale(4) rotateX(0.5turn);
  transform: scale(4) rotateX(0.5turn);
}

.c0 .count-enter-active {
  -webkit-transform: rotateX(0);
  -ms-transform: rotateX(0);
  transform: rotateX(0);
}

.c0 .count-exit {
  position: absolute;
  top: 0;
  left: 0;
  -webkit-transform: rotateX(0);
  -ms-transform: rotateX(0);
  transform: rotateX(0);
}

.c0 .count-exit-active {
  -webkit-transform: scale(2) rotateX(0);
  -ms-transform: scale(2) rotateX(0);
  transform: scale(2) rotateX(0);
}

.c1 {
  background: var(--green);
  color: white;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 3rem;
  height: 3rem;
  font-size: 1.4rem;
  font-weight: 600;
  font-feature-settings: 'tnum';
  font-variant-numeric: tabular-nums;
}

<div>
  <span
    class="c0"
  >
    <div
      class="c1"
    >
      11
    </div>
  </span>
</div>
`;

exports[`<CartCount/> updates via props 1`] = `
.c0 {
  position: relative;
}

.c0 .count {
  display: block;
  position: relative;
  -webkit-transition: -webkit-transform 0.4s;
  -webkit-transition: transform 0.4s;
  transition: transform 0.4s;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
}

.c0 .count-enter {
  -webkit-transform: scale(4) rotateX(0.5turn);
  -ms-transform: scale(4) rotateX(0.5turn);
  transform: scale(4) rotateX(0.5turn);
}

.c0 .count-enter-active {
  -webkit-transform: rotateX(0);
  -ms-transform: rotateX(0);
  transform: rotateX(0);
}

.c0 .count-exit {
  position: absolute;
  top: 0;
  left: 0;
  -webkit-transform: rotateX(0);
  -ms-transform: rotateX(0);
  transform: rotateX(0);
}

.c0 .count-exit-active {
  -webkit-transform: scale(2) rotateX(0);
  -ms-transform: scale(2) rotateX(0);
  transform: scale(2) rotateX(0);
}

.c1 {
  background: var(--green);
  color: white;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 3rem;
  height: 3rem;
  font-size: 1.4rem;
  font-weight: 600;
  font-feature-settings: 'tnum';
  font-variant-numeric: tabular-nums;
}

<div>
  <span
    class="c0"
  >
    <div
      class="c1 count-enter-done"
    >
      12
    </div>
  </span>
</div>
`;
